About Us page footer alignment fixes.

--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,12 @@ body {
   background-color: #000;
 }
 
+@media only screen and (min-width: 768px) {
+  .text-left-sm { text-align: left; }
+
+  .text-right-sm { text-align: right; }
+}
+
 @media only screen and (max-width: 600px) {
   .strip-shade h1 {
     margin-top: 4px;
